--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responesive.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons/themify-icons.css">
@@ -13,6 +13,9 @@
     <div id="heading">
         <div class="heading__logo">
             <h2>P&L</h2>
+        </div>
+        <div class="heading__sub-menu">
+            <i class="sub-menu__icon ti-menu-alt"></i>
         </div>
         <div class="heading__nav">
             <ul class="nav__nav-bar">
